# libhdate-glib

./: Makefile.am  README.md  configure.ac  libhdate-glib.pc.in
debian/: changelog  control  copyright
examples/: Makefile.am  test.py  test.vala  test_c.vala  test_gjs.js  test_ruby.rb
src/: Makefile.am  hdate-glib.vala
vapi/: Makefile.am  libhdate-glib.vapi  libhdate.vapi
